Microk8s/miodb_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miodb
  template:
    metadata:
      labels:
        app: miodb
    spec:
      containers:
        - name: miodb
          image: luca4k4/progetto_sistemi_cloud_db:v1-release
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          #restartPolicy: Always
