Microk8s/miobe_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miobe
spec:
  selector:
    app: miobe
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
