Microk8s/miodb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miodb
spec:
  #clusterIP: 10.152.183.19
  #clusterIPs:
  #  - 10.152.183.19
  #ipFamilies:
  #  - IPv4
  selector:
    app: miodb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: NodePort
