Microk8s/miofe_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miofe
spec:
  selector:
    app: miofe
  ports:
    - protocol: TCP
      port: 808
      targetPort: 808
  type: LoadBalancer
